// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NonNativeSelect renders 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div
      class="relative inline-flex text-[1rem] cursor-pointer w-full"
    >
      <div
        class="w-[inherit] outline-0"
      >
        <div
          class="base-Input relative inline-flex gap-y gap-x items-center rounded-sm [font-size:_unset] group text-nowrap p-2 h-8 w-full bg-white after:content-[""] after:inline-block after:absolute after:top-0 after:bottom-0 after:right-0 after:left-0 after:pointer-events after:border-solid after:rounded-sm after:border-gray [&:has(:focus)]:after:border-blue after:border [&:has(:focus)]:after:shadow-[0_0_0_3px] [&:has(:focus)]:after:shadow-blue hover:[&:not(:has(:focus))]:after:border-gray text-black cursor-[inherit] pr-[1.625rem]"
          role="textbox"
        >
          <input
            aria-invalid="false"
            autocomplete="off"
            class="base-Input [&::-webkit-calendar-picker-indicator]:bg bg-transparent border-none box-border cursor-[inherit] h-full outline-none p-0 peer resize-none w-full text-md leading-4 text-black [&::placeholder]:text-gray [&::placeholder]:opacity-100"
            readonly=""
            size="1"
            type="text"
            value="text1"
          />
        </div>
        <svg
          class="fill-current inline-block h-[1em] align-[-.125em] absolute top-[calc(50%-0.5rem)] right-[0.3125rem] text-graphite text-[1rem] cursor-inherit pointer-events"
          style="min-width: 16px; min-height: 16px;"
          viewBox="0 0 16 16"
        >
          <path
            d="m10.997 10.29.707.707-3.707 3.707-3.707-3.707.707-.707 3 3 3-3Zm-3-9 3.707 3.707-.707.707-3-3-3 3-.707-.707 3-3 .707-.707Z"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`NonNativeSelect renders custom options 1`] = `
<ul
  class="relative list-none outline-none py-2 px-0 m-0 rounded-sm bg-white shadow-5"
  role="listbox"
  tabindex="-1"
>
  <div
    tabindex="0"
  >
    <div
      class="overflow-y max-h [@media(max-height:585px)]:max-h-[calc(50vh [@media(max-height:585px)]:md:max-h-[calc(50vh"
    >
      <li
        aria-disabled="false"
        aria-selected="false"
        class="text-black bg-blue hover:bg-blue focus:bg-blue px-4 py-[0.375rem] min-w w-auto min-h sm:min-h md:min-h relative cursor-pointer transition-colors duration-150 ease-in overflow-hidden whitespace-normal text-left no-underline flex items-center justify-start outline-none appearance-none leading-4"
        data-highlighted="true"
        role="option"
        tabindex="-1"
        value="val1"
      >
        <div
          class="flex flex-1 max-w"
        >
          <div
            class="flex flex-col flex-1 min-w"
          >
            <div
              class="flex items-center"
            >
              <div
                class="w-4 inline-flex mr-2"
              />
              <div
                data-testid="custom-option-1"
              >
                text1
              </div>
            </div>
          </div>
        </div>
      </li>
      <li
        aria-disabled="false"
        aria-selected="false"
        class="text-black bg-transparent hover:bg-blue focus:bg-blue px-4 py-[0.375rem] min-w w-auto min-h sm:min-h md:min-h relative cursor-pointer transition-colors duration-150 ease-in overflow-hidden whitespace-normal text-left no-underline flex items-center justify-start outline-none appearance-none leading-4"
        data-highlighted="false"
        role="option"
        tabindex="-1"
        value="val2"
      >
        <div
          class="flex flex-1 max-w"
        >
          <div
            class="flex flex-col flex-1 min-w"
          >
            <div
              class="flex items-center"
            >
              <div
                class="w-4 inline-flex mr-2"
              />
              <div
                data-testid="custom-option-2"
              >
                text2
              </div>
            </div>
          </div>
        </div>
      </li>
      <li
        aria-disabled="false"
        aria-selected="false"
        class="text-black bg-transparent hover:bg-blue focus:bg-blue px-4 py-[0.375rem] min-w w-auto min-h sm:min-h md:min-h relative cursor-pointer transition-colors duration-150 ease-in overflow-hidden whitespace-normal text-left no-underline flex items-center justify-start outline-none appearance-none leading-4"
        data-highlighted="false"
        role="option"
        tabindex="-1"
        value="val3"
      >
        <div
          class="flex flex-1 max-w"
        >
          <div
            class="flex flex-col flex-1 min-w"
          >
            <div
              class="flex items-center"
            >
              <div
                class="w-4 inline-flex mr-2"
              />
              <div
                data-testid="custom-option-3"
              >
                text3
              </div>
            </div>
          </div>
        </div>
      </li>
    </div>
  </div>
</ul>
`;

exports[`NonNativeSelect renders description 1`] = `
<ul
  class="relative list-none outline-none py-2 px-0 m-0 rounded-sm bg-white shadow-5"
  role="listbox"
  tabindex="-1"
>
  <div
    tabindex="0"
  >
    <div
      class="overflow-y max-h [@media(max-height:585px)]:max-h-[calc(50vh [@media(max-height:585px)]:md:max-h-[calc(50vh"
    >
      <li
        aria-disabled="false"
        aria-selected="false"
        class="text-black bg-blue hover:bg-blue focus:bg-blue px-4 py-[0.375rem] min-w w-auto min-h sm:min-h md:min-h relative cursor-pointer transition-colors duration-150 ease-in overflow-hidden whitespace-normal text-left no-underline flex items-center justify-start outline-none appearance-none leading-4"
        data-highlighted="true"
        role="option"
        tabindex="-1"
        value="val1"
      >
        <div
          class="flex flex-1 max-w"
        >
          <div
            class="flex flex-col flex-1 min-w"
          >
            <div
              class="flex items-center"
            >
              <div
                class="w-4 inline-flex mr-2"
              />
              <span
                class="flex-1 text-md leading-5"
              >
                text1
              </span>
            </div>
            <div
              class="text-2xs mt-1 text-graphite ml-6"
            >
              description1
            </div>
          </div>
        </div>
      </li>
      <li
        aria-disabled="false"
        aria-selected="false"
        class="text-black bg-transparent hover:bg-blue focus:bg-blue px-4 py-[0.375rem] min-w w-auto min-h sm:min-h md:min-h relative cursor-pointer transition-colors duration-150 ease-in overflow-hidden whitespace-normal text-left no-underline flex items-center justify-start outline-none appearance-none leading-4"
        data-highlighted="false"
        role="option"
        tabindex="-1"
        value="val2"
      >
        <div
          class="flex flex-1 max-w"
        >
          <div
            class="flex flex-col flex-1 min-w"
          >
            <div
              class="flex items-center"
            >
              <div
                class="w-4 inline-flex mr-2"
              />
              <span
                class="flex-1 text-md leading-5"
              >
                text2
              </span>
            </div>
            <div
              class="text-2xs mt-1 text-graphite ml-6"
            >
              description2
            </div>
          </div>
        </div>
      </li>
      <li
        aria-disabled="false"
        aria-selected="false"
        class="text-black bg-transparent hover:bg-blue focus:bg-blue px-4 py-[0.375rem] min-w w-auto min-h sm:min-h md:min-h relative cursor-pointer transition-colors duration-150 ease-in overflow-hidden whitespace-normal text-left no-underline flex items-center justify-start outline-none appearance-none leading-4"
        data-highlighted="false"
        role="option"
        tabindex="-1"
        value="val3"
      >
        <div
          class="flex flex-1 max-w"
        >
          <div
            class="flex flex-col flex-1 min-w"
          >
            <div
              class="flex items-center"
            >
              <div
                class="w-4 inline-flex mr-2"
              />
              <span
                class="flex-1 text-md leading-5"
              >
                text3
              </span>
            </div>
            <div
              class="text-2xs mt-1 text-graphite ml-6"
            >
              description3
            </div>
          </div>
        </div>
      </li>
    </div>
  </div>
</ul>
`;
